--- a/trunk/Mail2Access.csproj
+++ b/trunk/Mail2Access.csproj
@@ -37,4 +37,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Pruebas.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="ADOX">
+      <Guid>{00000600-0000-0010-8000-00AA006D2EA4}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>8</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+    </COMReference>
+  </ItemGroup>
 </Project>
